--- a/app/src/main/res/layout/content_register_pet.xml
+++ b/app/src/main/res/layout/content_register_pet.xml
@@ -27,7 +27,6 @@
                 android:src="@drawable/back"/>
 
 
-
         <com.crossapps.petpal.Util.custom.TextViewPoppin
                 android:id="@+id/changeProfilePicture"
                 android:layout_width="wrap_content"
@@ -56,7 +55,7 @@
                 android:textSize="15sp"
                 android:layout_margin="10dp"/>
 
-     <com.crossapps.petpal.Util.custom.TextViewPoppin
+        <com.crossapps.petpal.Util.custom.TextViewPoppin
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Owner"
@@ -109,6 +108,22 @@
                 android:inputType="text"
                 android:textSize="15sp"
                 android:layout_margin="10dp"/>
+
+        <Button
+                android:id="@+id/submit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Submit"
+                android:textSize="15sp"
+                android:padding="10dp"
+                android:layout_margin="10dp"
+                android:layout_gravity="center"/>
+
+        <ImageView
+                android:id="@+id/qrImage"
+                android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"/>
         <!--<View-->
         <!--android:layout_marginTop="5dp"-->
         <!--android:layout_width="match_parent"-->
