--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,10 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
-    <TextView
-            android:id="@+id/profileText"
-            android:layout_width="match_parent" android:layout_height="match_parent"
-            android:text="This is Profile"
-            android:layout_centerInParent="true"
-            android:textSize="30sp"/>
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/items"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 </FrameLayout>
