--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,41 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        android:fitsSystemWindows="true"
+>
 
-    <android.support.design.widget.FloatingActionButton
-            android:layout_width="56dp"
-            android:id="@+id/fab"
-            android:layout_height="56dp"
-            app:elevation="6dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/fab_gradient"
-            android:layout_above="@+id/navigation"
-            app:pressedTranslationZ="12dp"
-            android:layout_alignParentEnd="true" />
-
-    <FrameLayout
-            android:id="@+id/container"
+    <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/navigation"
-    >
-    </FrameLayout>
+            android:layout_height="match_parent">
+
+        <android.support.design.widget.CoordinatorLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                <android.support.design.widget.AppBarLayout
+                        android:id="@+id/tabanim_appbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    <include layout="@layout/toolbar"
+                             android:layout_alignParentTop="true"
+                             android:layout_width="match_parent"
+                             android:layout_height="wrap_content"/>
+
+                    <!--app:layout_scrollFlags="scroll|enterAlways|snap"-->
+                </android.support.design.widget.AppBarLayout>
+
+                <FrameLayout
+                        android:layout_below="@+id/tabanim_appbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_above="@+id/navigation"
+                        android:id="@+id/container"/>
+
+                <android.support.design.widget.FloatingActionButton
+                        android:layout_width="56dp"
+                        android:id="@+id/fab"
+                        android:layout_height="56dp"
+                        app:elevation="6dp"
+                        android:layout_marginEnd="25dp"
+                        android:layout_marginBottom="10dp"
+                        android:src="@drawable/fab_gradient"
+                        android:layout_above="@+id/navigation"
+                        android:layout_gravity="bottom"
+                        app:pressedTranslationZ="12dp"
+                        android:layout_alignParentEnd="true"/>
+
+                <android.support.design.widget.BottomNavigationView
+                        android:id="@+id/navigation"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginEnd="0dp"
+                        android:layout_alignParentBottom="true"
+                        android:background="?android:attr/windowBackground"
+                        app:menu="@menu/navigation"/>
+            </RelativeLayout>
+
+        </android.support.design.widget.CoordinatorLayout>
+
+
+    </RelativeLayout>
+
+    <include layout="@layout/navigation_drawer"/>
+
+</android.support.v4.widget.DrawerLayout>
+
+        <!--
+        <RelativeLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".MainActivity">
+
+            <android.support.design.widget.FloatingActionButton
+                    android:layout_width="56dp"
+                    android:id="@+id/fab"
+                    android:layout_height="56dp"
+                    app:elevation="6dp"
+                    android:layout_marginEnd="25dp"
+                    android:layout_marginBottom="10dp"
+                    android:src="@drawable/fab_gradient"
+                    android:layout_above="@+id/navigation"
+                    app:pressedTranslationZ="12dp"
+                    android:layout_alignParentEnd="true" />
+
+            <FrameLayout
+                    android:id="@+id/container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_above="@+id/navigation"
+            >
+            </FrameLayout>
 
 
 
-    <android.support.design.widget.BottomNavigationView
-            android:id="@+id/navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp"
-            android:layout_alignParentBottom="true"
-            android:background="?android:attr/windowBackground"
-            app:menu="@menu/navigation" />
-</RelativeLayout>
+            <android.support.design.widget.BottomNavigationView
+                    android:id="@+id/navigation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="?android:attr/windowBackground"
+                    app:menu="@menu/navigation" />
+        </RelativeLayout>-->
