--- a/app/src/main/res/layout/dialog_loading.xml
+++ b/app/src/main/res/layout/dialog_loading.xml
@@ -5,7 +5,7 @@
 android:orientation="vertical">
 
 
-    <com.webpulse.trafficcontrol.Util.custom.TextViewPoppin
+    <com.crossapps.petpal.Util.custom.TextViewPoppin
             android:id="@+id/loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
